package com.epam.rd.autocode.assessment.appliances.model;

public enum Category {
    BIG, SMALL
}
