package com.epam.rd.autocode.assessment.appliances.model;

public enum PowerType {
    AC220,
    AC110,
    ACCUMULATOR
}
